# paul-mclendahand

./: .gitignore  HISTORY.rst  MANIFEST.in  Makefile  README.rst  justfile  pyproject.toml  requirements-dev.txt  setup.py  tox.ini
.github/workflows/: main.yml
paul_mclendahand/: __init__.py  cmd_pmac.py
src/paul_mclendahand/: __init__.py  cmd_pmac.py
tests/: test_pmac.py
