[project]
name = "paul-mclendahand"
description = "Tool for combining GitHub pull requests."
version = "3.1.0"
readme = "README.rst"
keywords = ["github", "pr"]
authors = [{name = "Will Kahn-Greene"}]
license = {text = "MPLv2"}
requires-python = ">=3.8"
dependencies = [
    "click",
    "importlib_metadata",
    "rich",
    "tomli>=1.1.0; python_version < '3.11'",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
urls.Homepage = "https://github.com/willkg/paul-mclendahanad"
urls.Source = "https://github.com/willkg/paul-mclendahanad"
urls.Issues = "https://github.com/willkg/paul-mclendahanad/issues"

[project.scripts]
pmac = "paul_mclendahand.cmd_pmac:pmac_cli"

[project.optional-dependencies]
dev = [
    "black",
    "build",
    "check-manifest",
    "cogapp",
    "pytest",
    "ruff",
    "setuptools",
    "twine",
    "tox",
    "tox-gh-actions",
]


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[tool.ruff]
# Enable pycodestyle (E), pyflakes (F), and bugbear (B) rules
select = ["E", "F", "B"]

# Ignore line length violations--Black handles those
line-length = 88
ignore = ["E501"]

target-version = "py38"

src = ["src", "tests"]

[tool.ruff.flake8-quotes]
docstring-quotes = "double"


[tool.black]
line-length = 88
target-version = ["py38"]


[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist =
    py38
    py38-lint
    py39
    py310
    py311
    py312

[gh-actions]
python =
    3.8: py38
    3.9: py39
    3.10: py310
    3.11: py311
    3.12: py312

[testenv]
extras = dev
commands = pytest {posargs}

[testenv:py38-lint]
basepython = python3.8
changedir = {toxinidir}
commands =
    black --diff src tests
    ruff src tests
"""
