[project]
name = "paul-mclendahand"
description = "Tool for combining GitHub pull requests."
version = "3.2.0"
readme = "README.rst"
keywords = ["github", "pr"]
authors = [{name = "Will Kahn-Greene"}]
license = {text = "MPLv2"}
requires-python = ">=3.9"
dependencies = [
    "click",
    "importlib_metadata",
    "rich",
    "tomli>=1.1.0; python_version < '3.11'",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
urls.Homepage = "https://github.com/willkg/paul-mclendahanad"
urls.Source = "https://github.com/willkg/paul-mclendahanad"
urls.Issues = "https://github.com/willkg/paul-mclendahanad/issues"

[project.scripts]
pmac = "paul_mclendahand.cmd_pmac:pmac_cli"

[project.optional-dependencies]
dev = [
    "build",
    "cogapp",
    "pytest",
    "ruff",
    "setuptools",
    "twine",
    "tox",
    "tox-gh-actions",
    "tox-uv",
]


[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[tool.ruff]
target-version = "py39"
src = ["src", "tests"]
line-length = 88

[tool.ruff.lint]
# Enable pycodestyle (E), pyflakes (F), and bugbear (B) rules
select = ["E", "F", "B"]

# Ignore line length violations--Black handles those
ignore = ["E501"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"


[tool.tox]
legacy_tox_ini = """
[tox]
envlist =
    py39
    py39-lint
    py310
    py311
    py312
    py313
isolated_build = True
uv_python_preference = only_managed

[gh-actions]
python =
    3.9: py39
    3.10: py310
    3.11: py311
    3.12: py312
    3.13: py313

[testenv]
extras = dev
commands = pytest {posargs}

[testenv:py39-lint]
basepython = python3.9
changedir = {toxinidir}
commands =
    ruff format --check src tests
    ruff check src tests
"""
